* https://github.com/devonfw/ide/issues/491[#491]: Consider lombok support
* https://github.com/devonfw/ide/pull/489[#489]: Update node to v12.19.0 and VS Code to 1.50.1
* https://github.com/devonfw/ide/issues/470[#470]: reverse merge of workspace settings not sorting properties anymore
* https://github.com/devonfw/ide/issues/483[#483]: Error during installation when npm is already installed
* https://github.com/devonfw/ide/issues/415[#415]: documentation to customize settings
* https://github.com/devonfw/ide/issues/479[#479]: Error for vscode plugin installation
* https://github.com/devonfw/ide/issues/471[#471]: Preconfigure Project Explorer with Hierarchical Project Presentation

The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/16?closed=1[milestone 2020.12.001].

== 2020.08.002

Update with the following bugfixes and improvements:

* https://github.com/devonfw/ide/issues/452[#452]: Consider support for IntelliJ Ultimate
* https://github.com/devonfw/ide/pull/474[#474]: make intellij work on linux (idea.sh vs. idea)
* https://github.com/devonfw/ide/pull/475[#475]: IntelliJ edition support not working properly
* https://github.com/devonfw/ide/pull/477[#477]: update IntelliJ to 2020.2.1
* https://github.com/devonfw/ide/pull/478[#478]: add IDEA_HOME to PATH after installation
* https://github.com/devonfw/ide/pull/465[#465]: Security update for node.js and VS code
* https://github.com/devonfw/ide/issues/467[#467]: Expansion of ~ stopped working on windows CMD (M2_HOME not properly set)
* https://github.com/devonfw/ide/issues/461[#461]: settings still not updated: JsonMerger not writing even if target file not exists
* https://github.com/devonfw/ide/pull/455[#455]: Fix args quoting for node commandlet
* https://github.com/devonfw/ide/pull/464[#464]: Update advanced-tooling-windows.asciidoc
* https://github.com/devonfw/ide/issues/458[#458]: Outdated readme.txt
