@@ -8,14 +8,15 @@ function doSetup() {
   doDevonCommand npm -q setup
 
   local software_version=${NG_VERSION:-latest}
-  local installed_version=$(npm list -g --depth 0 | sed -n -e '/angular\/cli/ s/.*@//p')
+  local installed_version
+  installed_version=$(npm list -g --depth 0 | sed -n -e '/angular\/cli/ s/.*@//p')
 
   if [ "$installed_version" == "$software_version" ] 
   then
     doEcho "Version ${installed_version} of angular-cli (ng) is already installed at ${NG_CMD}."
   else
     doEcho "Installing angular-cli ${software_version}..."
-    doDevonCommand npm install -g @angular/cli@${software_version}
+    doDevonCommand npm install -g "@angular/cli@${software_version}"
   fi
 }
 
